Should be working ok now. Mike